# discord-puppy

./: .env.example  .gitignore  DISCORD_PUPPY_PLAN.md  README.md  pyproject.toml
.beads/: issues.jsonl
discord_puppy/: __init__.py  __main__.py  bot.py  config.py  heartbeat.py  personality.py
discord_puppy/agents/: __init__.py  discord_puppy_agent.py  puppy_agent.py
discord_puppy/memory/: __init__.py  database.py  memory_tools.py  message_indexer.py  user_notes.py
discord_puppy/tools/: __init__.py  chaos.py  discord_send.py  memory_tools.py  web_search.py
discord_puppy/vision/: __init__.py  image_analyzer.py  vision_tools.py
tests/: __init__.py  conftest.py  test_bot.py  test_config.py  test_image_analyzer.py  test_integration.py  test_memory_tools.py  test_personality.py  test_user_notes.py  test_vision_tools.py  test_web_search.py
